REGRESSION(r260276): menu items in footer of https://salo.ai are invisible until you hover or resize https://bugs.webkit.org/show_bug.cgi?id=213712 <rdar://problem/64893190>

Reviewed by Zalan Bujtas.

Source/WebCore:

A negative z-index child triggers a foreground layer inside overflow scroll. This foreground layer
gets the PaintingOverflowContents flag but not the PaintingCompositingScrollingPhase flag, but we still need
to avoid the clip check that happens in RenderBlock::paint(), so change RenderLayer::paintLayerContents()
to just check for isPaintingOverflowContents.

Test: compositing/scrolling/async-overflow-scrolling/foreground-layer-paint-phase.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):

LayoutTests:

* compositing/scrolling/async-overflow-scrolling/foreground-layer-paint-phase-expected.html: Added.
* compositing/scrolling/async-overflow-scrolling/foreground-layer-paint-phase.html: Added.


Canonical link: https://commits.webkit.org/226701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263860 268f45cc-cd09-0410-ab3c-d52691b4dbfc